test_files/recompilation/type_error/foo_V2+3.erl
-module(foo).

-export([foo/1]).

-spec bar(string()) -> string().
bar(X) -> X.

% foo fails to type check
-spec foo(integer()) -> integer().
foo(X) -> bar(X).
